addnums_test = executable('addnums_test', 'addnums_test.cpp', include_directories: incdir, link_with: hypolib)
subnums_test = executable('subnums_test', 'subnums_test.cpp', include_directories: incdir, link_with: hypolib)
product_test = executable('product_test', 'product_test.cpp', include_directories: incdir, link_with: hypolib)

test('addnums', addnums_test)
test('subnums', subnums_test)
test('product', product_test)
